@@ -23,6 +23,8 @@
 * Lib: Fix in handing chain re-orgs when a new head has less blocks, but more POW (exposed by ongoing testnet3 stressing)
 * Client/Network: improved the way how unfinished "getdata" is stored for later (when the send buffer is full)
 * Client/Network: do not sent "ping" messages to peers that we have pending block downloads from
+* Wallet: do not offer to save the password when "-p" switch was used
+* Wallet: "-words" and "-xprv" now prevent tx signing and no longer need to be used together with "-l"
 
 1.10.2 - 2022-09-06:
 * Client: New config value "Memory.CompressBlockDB" (default true)
